[package]
name = "aquamarine"
version = "0.0.0"
authors = ["Fluence Labs"]
edition = "2018"

[dependencies]
libp2p-core = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "master" }
parity-multiaddr = { git = "https://github.com/fluencelabs/rust-libp2p", branch = "master" }
serde_json = "1.0.57"
